--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1168,51 +1168,6 @@ a {
     padding-right: 4rem;
   }
 }
-.cid-tyrnwg7Ueu {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-  background-color: #bed3f9;
-}
-.cid-tyrnwg7Ueu .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-tyrnwg7Ueu .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-tyrnwg7Ueu [class^="socicon-"]:before,
-.cid-tyrnwg7Ueu [class*=" socicon-"]:before {
-  line-height: 55px;
-}
-.cid-tyrnwg7Ueu .btn-social {
-  font-size: 32px;
-  border-radius: 50%;
-  width: 55px;
-  height: 55px;
-  line-height: 55px;
-  padding: 0;
-  position: relative;
-  cursor: pointer;
-  color: #6592e6;
-  border-width: 2px;
-  transition: all .3s;
-  border-color: #6592e6;
-}
-.cid-tyrnwg7Ueu .btn-social:hover {
-  background: #6592e6;
-}
-.cid-tyrnwg7Ueu .btn-social:hover i.socicon {
-  color: #ffffff !important;
-}
-.cid-tyrnwg7Ueu .mbr-section-title,
-.cid-tyrnwg7Ueu .mbr-social-likes {
-  text-align: left;
-}
 .cid-tyrmrB3I5y {
   padding-top: 0rem;
   padding-bottom: 0rem;
@@ -1427,15 +1382,15 @@ a {
     padding-right: 4rem;
   }
 }
-.cid-tyrz0fnCQL {
-  padding-top: 3rem;
-  padding-bottom: 5rem;
+.cid-tAw3oEIltm {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
   background-image: url("../../../assets/images/high-resolution-wallpaper-background-id-77701427118-2000x1250.jpg");
 }
-.cid-tyrz0fnCQL .mbr-fallback-image.disabled {
+.cid-tAw3oEIltm .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-tyrz0fnCQL .mbr-fallback-image {
+.cid-tAw3oEIltm .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -1444,67 +1399,258 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-tyrz0fnCQL .team-card {
-  margin-bottom: 2rem;
+.cid-tAw3oEIltm .item {
+  padding-bottom: 2rem;
+}
+.cid-tAw3oEIltm .item-wrapper {
+  position: relative;
+}
+.cid-tAw3oEIltm .item-wrapper .icon-wrapper {
+  pointer-events: none;
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  font-size: 22px;
+  left: 50%;
+  top: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  opacity: 0;
+  color: #ffffff;
+  transform: translateX(-50%) translateY(-50%);
+  background-color: #1b1b1b;
+  transition: 0.2s;
+}
+.cid-tAw3oEIltm .item-wrapper:hover .icon-wrapper {
+  opacity: 0.7;
+}
+.cid-tAw3oEIltm .carousel-control,
+.cid-tAw3oEIltm .close {
+  background: #1b1b1b;
+}
+.cid-tAw3oEIltm .carousel-control-prev {
+  margin-left: 2.5rem;
+}
+.cid-tAw3oEIltm .carousel-control-prev span {
+  margin-right: 5px;
+}
+.cid-tAw3oEIltm .carousel-control-next {
+  margin-right: 2.5rem;
+}
+.cid-tAw3oEIltm .carousel-control-next span {
+  margin-left: 5px;
+}
+.cid-tAw3oEIltm .close {
+  position: fixed;
+  opacity: 0.5;
+  font-size: 22px;
+  font-weight: 300;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  border: 2px solid #fff;
+  text-shadow: none;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+  font-family: 'Moririse2';
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.cid-tAw3oEIltm .close::before {
+  content: '\e91a';
+}
+.cid-tAw3oEIltm .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-tAw3oEIltm .carousel-control {
+  display: flex;
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
   transition: all 0.3s;
 }
-.cid-tyrz0fnCQL .team-card:hover {
-  transform: translateY(-10px);
+.cid-tAw3oEIltm .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
 }
-.cid-tyrz0fnCQL .card-wrap {
-  background: #ffffff;
-  border-radius: 4px;
+.cid-tAw3oEIltm .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
 }
-@media (max-width: 991px) {
-  .cid-tyrz0fnCQL .card-wrap {
-    margin-bottom: 2rem;
+@media (max-width: 767px) {
+  .cid-tAw3oEIltm .carousel-control {
+    top: auto;
+    bottom: 1rem;
   }
 }
-.cid-tyrz0fnCQL .card-wrap .image-wrap img {
-  width: 100%;
+.cid-tAw3oEIltm .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 3px;
 }
-@media (min-width: 768px) {
-  .cid-tyrz0fnCQL .card-wrap .content-wrap {
-    padding: 2rem;
+.cid-tAw3oEIltm .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-tAw3oEIltm .carousel-indicators li.active,
+.cid-tAw3oEIltm .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-tAw3oEIltm .carousel-indicators li::after,
+.cid-tAw3oEIltm .carousel-indicators li::before {
+  content: none;
+}
+.cid-tAw3oEIltm .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-tAw3oEIltm .carousel-indicators {
+    display: none !important;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tAw3oEIltm .carousel-indicators {
+    margin-bottom: 3.625rem !important;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-tyrz0fnCQL .card-wrap .content-wrap {
-    padding: 1rem;
+  .cid-tAw3oEIltm .carousel-indicators {
+    display: none;
   }
 }
-.cid-tyrz0fnCQL .social-row {
-  text-align: center;
-}
-.cid-tyrz0fnCQL .social-row .soc-item {
-  display: inline-block;
-  text-align: center;
-  border-radius: 50%;
-  margin-right: 0.6rem;
-  margin-bottom: 1rem;
-  padding: 0.5rem;
-  border: 2px solid #6592e6;
-  transition: all 0.3s;
-}
-.cid-tyrz0fnCQL .social-row .soc-item .mbr-iconfont {
-  transition: all 0.3s;
+.cid-tAw3oEIltm .carousel-inner {
   display: flex;
-  justify-content: center;
-  align-content: center;
-  color: #6592e6;
-  font-size: 1.5rem;
+  align-items: center;
 }
-.cid-tyrz0fnCQL .social-row .soc-item:hover {
-  background-color: #6592e6;
+.cid-tAw3oEIltm .carousel-inner > .active {
+  display: block;
 }
-.cid-tyrz0fnCQL .social-row .soc-item:hover .mbr-iconfont {
-  color: #ffffff;
+.cid-tAw3oEIltm .carousel-control.left {
+  left: 0;
+  margin-left: 2.5rem;
 }
-.cid-tyrz0fnCQL .mbr-section-title {
-  color: #22a5e5;
+.cid-tAw3oEIltm .carousel-control.right {
+  right: 0;
+  margin-right: 2.5rem;
 }
-.cid-tyrz0fnCQL .mbr-section-subtitle {
+.cid-tAw3oEIltm .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 768px) {
+  .cid-tAw3oEIltm .carousel-control,
+  .cid-tAw3oEIltm .carousel-indicators,
+  .cid-tAw3oEIltm .modal .close {
+    position: fixed;
+  }
+}
+@media (max-width: 767px) {
+  .cid-tAw3oEIltm .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 20px;
+  }
+  .cid-tAw3oEIltm .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-tAw3oEIltm .carousel-indicators .active,
+.cid-tAw3oEIltm .carousel-indicators li {
+  width: 7px;
+  height: 7px;
+  margin: 3px;
+  background: #000000;
+  opacity: 0.5;
+  border: 4px solid #000000;
+}
+.cid-tAw3oEIltm .carousel-indicators .active {
+  background: #fff;
+}
+.cid-tAw3oEIltm .carousel-indicators li {
+  max-width: 15px;
+  max-height: 15px;
+  border-radius: 50%;
+}
+.cid-tAw3oEIltm .modal {
+  padding-left: 0 !important;
+  position: fixed;
+  overflow: hidden;
+  padding-right: 0 !important;
+}
+.cid-tAw3oEIltm .modal-dialog {
+  margin: 0 auto;
+  max-width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-tAw3oEIltm .modal-content {
+  border-radius: 0;
+  border: none;
+  background: transparent;
+}
+.cid-tAw3oEIltm .modal-body {
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+.cid-tAw3oEIltm .modal-body img {
+  width: 100%;
+  object-fit: contain;
+  max-height: calc(100vh - 1.75rem);
+}
+.cid-tAw3oEIltm .carousel {
+  width: 100%;
+}
+.cid-tAw3oEIltm .modal-backdrop.in {
+  opacity: 0.8;
+}
+.cid-tAw3oEIltm .modal.fade .modal-dialog {
+  transition: margin-top 0.3s ease-out;
+}
+.cid-tAw3oEIltm .modal.fade .modal-dialog,
+.cid-tAw3oEIltm .modal.in .modal-dialog {
+  transform: none;
+}
+.cid-tAw3oEIltm .mbr-gallery .item-wrapper {
+  cursor: pointer;
+}
+.cid-tAw3oEIltm H6 {
+  text-align: center;
   color: #ff00a9;
+}
+.cid-tAw3oEIltm H3 {
+  color: #ff9966;
+}
+.cid-tAw3oEIltm H4 {
+  color: #15d485;
 }
 .cid-tuh72CAPyN {
   padding-top: 0rem;
@@ -1553,31 +1699,6 @@ a {
 }
 .cid-tyrxUeRdsX .list {
   color: #000000;
-}
-.cid-tugQIYAvct {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  background-color: #ffe161;
-}
-.cid-tugQIYAvct .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-tugQIYAvct .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-tugQIYAvct .video-wrapper iframe {
-  width: 100%;
-}
-.cid-tugQIYAvct .mbr-section-title,
-.cid-tugQIYAvct .mbr-section-subtitle,
-.cid-tugQIYAvct .mbr-text {
-  text-align: center;
 }
 .cid-tuh2qX40po {
   padding-top: 1rem;
